<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/home"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view__home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/linear_progress_indicator__home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/constraint_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/constraint_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_margin" />

            <TextView
                android:id="@+id/text_view__welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/constraint_end"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/linear_progress_indicator__home"
                tools:text="Good morning, Egor!" />

            <LinearLayout
                android:id="@+id/layout__no_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/constraint_end"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/budget_buttons">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:contentDescription="@string/no_transaction"
                    android:src="@drawable/info_fill1_wght400_grad0_opsz24"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/no_transaction_detailed_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_view__all_incomes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:drawablePadding="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:drawableStartCompat="@drawable/trending_up_fill0_wght400_grad0_opsz24"
                app:layout_constraintBottom_toBottomOf="@+id/text_view__all_expanses"
                app:layout_constraintEnd_toStartOf="@id/text_view__all_expanses"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/text_view__welcome"
                tools:text="@string/incomes_home_screen" />

            <TextView
                app:layout_constraintBottom_toBottomOf="@id/text_view__all_incomes"
                android:id="@+id/text_view__all_expanses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:drawablePadding="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:drawableStartCompat="@drawable/trending_down_fill0_wght400_grad0_opsz24"
                app:layout_constraintEnd_toStartOf="@+id/constraint_end"
                app:layout_constraintStart_toEndOf="@id/text_view__all_incomes"
                app:layout_constraintTop_toBottomOf="@id/text_view__welcome"
                tools:text="@string/expanses_home_screen" />

            <HorizontalScrollView
                android:id="@+id/budget_buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="@id/constraint_end"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/text_view__all_incomes">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button__to_chart"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Анализ за месяц"
                        app:icon="@drawable/bar_chart_fill0_wght400_grad0_opsz24"
                        app:iconPadding="4dp"
                        app:layout_constraintStart_toStartOf="@id/constraint_start"
                        app:layout_constraintTop_toBottomOf="@id/text_view__all_incomes" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button__to_set_plan"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Планироваине"
                        app:icon="@drawable/pie_chart_fill0_wght400_grad0_opsz48"
                        app:iconPadding="4dp"
                        app:layout_constraintStart_toEndOf="@+id/button__to_chart"
                        app:layout_constraintTop_toBottomOf="@id/text_view__all_incomes" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button__to_set_notification"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Добавить напоминание"
                        app:icon="@drawable/notifications_fill0_wght400_grad0_opsz24"
                        app:iconPadding="4dp"
                        app:layout_constraintStart_toEndOf="@+id/button__to_chart"
                        app:layout_constraintTop_toBottomOf="@id/text_view__all_incomes" />


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/text_view__latest_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/latest_transaction"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/budget_buttons" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view__home_all_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/constraint_end"
                app:layout_constraintStart_toStartOf="@id/constraint_start"
                app:layout_constraintTop_toBottomOf="@id/text_view__latest_transaction"
                tools:itemCount="3"
                tools:listitem="@layout/list_item__transaction_income" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab__add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/fab_action_to_add_transaction"
        android:src="@drawable/add_fill1_wght400_grad0_opsz24"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>